syntax = "proto3";

package InfinityNetServer.BuildingBlocks.Application.Protos;

option csharp_namespace = "InfinityNetServer.BuildingBlocks.Application.Protos";

message ReactionCountsRequest {

	repeated string ownerIds = 1;

}

message ReactionByOwnerIdAndProfileId {

	string ownerId = 1;

	string profileId = 2;

}

message ReactionsByProfileIdsRequest {

	repeated ReactionByOwnerIdAndProfileId ownerIdsAndProfileIds = 1;

}

message ReactionCount {
	
	string type = 1;

	int32 count = 2;

}

message ReactionCountWithOwnerId {

	string ownerId = 1;

	repeated ReactionCount countDetails = 2;

}

message ReactionCountsResponse {

	repeated ReactionCountWithOwnerId reactionCounts = 2;

}

message PreviewReaction {

	string ownerId = 1;

	string profileId = 2;

	string type = 3;

}

message PreviewReactionsResponse {

	repeated PreviewReaction previewReactions = 1;

}

service ReactionService {

	rpc getPostReactionsCount(ReactionCountsRequest) returns (ReactionCountsResponse);

	rpc getCommentReactionsCount(ReactionCountsRequest) returns (ReactionCountsResponse);

	rpc getPostReactionsByProfileIds(ReactionsByProfileIdsRequest) returns (PreviewReactionsResponse);

	rpc getCommentReactionsByProfileIds(ReactionsByProfileIdsRequest) returns (PreviewReactionsResponse);

}
